--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*{
+  margin: 0;
+  padding:0;
+  box-sizing: border-box;
+}
+@import 'antd/dist/antd.css'; // or 'antd/dist/antd.less'
+
+@import './style/common-style.scss';
